<resources>
    <string name="app_name">LoginActivity</string>
    <string name="icon_image">Icon image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="muscle_metric">Muscle Metric</string>
    <string name="muscle_metric_home_page">Muscle Metric Home Page</string>
    <string name="exercise_details">%1$d sets • %2$d reps</string>
    <string name="Email">Email</string>
</resources>