<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".MainActivity">

    <!-- Container for login content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Logo or Icon -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/icon_image"
            android:src="@drawable/muscle_icon"
            android:layout_marginBottom="16dp"
            android:id="@+id/muscle_icon"/>

        <!-- App Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muscle_metric"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

        <!-- Description Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your workout companion app"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginBottom="32dp"/>

        <!-- Username EditText -->
        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:inputType="text"
            app:layout_constraintTop_toBottomOf="@id/muscle_icon"/>

        <!-- Password EditText -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/username_input"/>

        <!-- Login Button -->
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/white"
            android:textColor="#3B84F1"
            android:padding="18dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/password_input"
            android:layout_marginTop="32dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
